# Konstruktor

./: AUTHORS  CMakeLists.txt  CNAME  index.html  konstruktor-0.9-beta1.tar.bz2  konstruktor_0.9-beta1-1_amd64.deb  konstruktor_0.9-beta1-1_i386.deb  konstruktor_0.9-beta1-2_amd64.deb  konstruktor_0.9-beta1-2_i386.deb
debian/: README.Debian  README.source  changelog  control  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  konstruktor.cron.d.ex  konstruktor.default.ex  konstruktor.doc-base.EX  konstruktor.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  substvars  watch.ex
debian/konstruktor/DEBIAN/: control  md5sums  postinst  postrm  shlibs
debian/konstruktor/usr/include/libldr/: color.h  elements.h  extension.h  math.h  metrics.h  model.h  part_library.h  writer.h
debian/konstruktor/usr/include/libldr/renderer/: normal_extension.h  opengl_extension_shader.h  parameters.h  renderer_opengl_retained.h  vbuffer_extension.h
debian/konstruktor/usr/lib/: libldraw.so.0.5.0  libldraw.so.1  libldrawrenderer.so.0.4.0  libldrawrenderer.so.1
debian/konstruktor/usr/share/doc/konstruktor/: copyright
debian/konstruktor/usr/share/icons/hicolor/scalable/apps/: konstruktor.svgz
scripts/: generate_color_table.py
src/: CMakeLists.txt  opengl.h
src/app/: #CMakeLists.txt#  .#CMakeLists.txt  .directory  CMakeLists.txt  Messages.sh  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  actionmanager.cpp  actionmanager.h  application.cpp  application.h  colordialog.cpp  colordialog.h  colordialog.ui  colormanager.cpp  colormanager.h  commandbase.cpp  commandbase.h  commandcolor.cpp  commandcolor.h  commandinsert.cpp  commandinsert.h  commandpaste.cpp  commandpaste.h  commandremove.cpp  commandremove.h  commandtransform.cpp  commandtransform.h  commandtransformlinear.cpp  commandtransformlinear.h  common.h  config.cpp  config.h  config.kcfg  config.kcfgc  configdialog.cpp  configdialog.h  configdialog.ui  configdisplayform.ui  (+84 more)
src/app/files/: credits.html  license.txt
src/app/icons/: .directory  CMakeLists.txt
src/app/kde/: config.kcfg  config.kcfgc  konstruktorui.rc  mainwindow.cpp  mainwindow.h  platformdefs.h
src/app/povray/headers/: l3logo.pov
src/app/povray/substitutes/: stud.dat.pov  stud2.dat.pov  stud3.dat.pov  stud4.dat.pov
src/libldr/: #color.cpp#  #color.h#  #common.h#  #elements.cpp#  #elements.h#  #exception.h#  #extension.h#  #math.cpp#  #math.h#  #metrics.cpp#  #metrics.h#  #model.cpp#  #model.h#  #part_library.cpp#  #part_library.h#  #reader.cpp#  #reader.h#  #utils.cpp#  #utils.h#  #writer.cpp#  #writer.h#  CMakeLists.txt  bfc.cpp  bfc.h  color.cpp  color.h  common.h  elements.cpp  elements.h  exception.h  filter.h  math.cpp  math.h  metrics.cpp  metrics.h  model.cpp  model.h  part_library.cpp  part_library.h  part_library_posix.cpp  (+6 more)
src/renderer/: CMakeLists.txt  modifier.h  mouse_rotation.cpp  mouse_rotation.h  normal_extension.cpp  normal_extension.h  opengl.h  opengl_extension.cpp  opengl_extension.h  opengl_extension_shader.cpp  opengl_extension_shader.h  opengl_extension_vbo.cpp  opengl_extension_vbo.h  parameters.cpp  parameters.h  renderer.cpp  renderer.h  renderer_opengl.cpp  renderer_opengl.h  renderer_opengl_immediate.cpp  renderer_opengl_immediate.h  renderer_opengl_retained.cpp  renderer_opengl_retained.h  renderer_opengl_retained_vshader.h  vbuffer_extension.cpp  vbuffer_extension.h
src/tests/: CMakeLists.txt  modelviewer.cpp  modelviewer.h  modelviewer_glut.cpp  modelviewer_qt.cpp
